# f1_web

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2024_08_12_1628-be620f1a28c1_added_user_models.py  2024_08_12_1805-79f6674fb129_added_structures_to_races.py  2024_08_14_1627-6cc21f181509_added_formula_1_structs.py  2024_08_24_1616-92b3774a6ebf_first_migration.py
formula_1/: config.py  main.py  utils.py
formula_1/auth/: dependencies.py
formula_1/data_processors/: extractor_data.py  import_file_data.py  import_site_data.py
formula_1/db/: __init__.py  dependencies.py  models.py  types.py
formula_1/extractor/: extractor_data.py  import_data.py  test.py
formula_1/features/: errors.py
formula_1/features/companies/: __init__.py  companies.py
formula_1/features/drivers/: __init__.py  drivers.py
formula_1/features/organizations/: __init__.py  organizations.py
formula_1/features/users/: __init__.py  login.py  users.py  users_me.py
formula_1/static/css/: fonts.css
formula_1/templates/: index.html
frontend/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/src/: App.vue  consts.ts  main.ts  store.ts  utils.ts  validators.ts
frontend/src/components/: BasicSnackbar.vue  CRUDTable.vue  FormDialog.vue  NavbarView.vue  SimpleTable.vue
frontend/src/composables/: load-organizations.ts  load-searches.ts
frontend/src/directives/: simplemaskmoney.ts
frontend/src/plugins/: reset-store.ts  vuetify.ts
frontend/src/router/: index.ts  routes.ts
(+11 files in other folders)
