[tool.poetry]
name = "formula-1"
version = "0.1.0"
description = ""
authors = ["Leandro <leandroflores7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
psycopg = "^3.2.1"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
psycopg-binary = "^3.2.1"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]